<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amg.organizen.MainActivity"
    android:background="@color/orange"
    android:padding="3dp"
    android:paddingTop="50dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/read_only_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_only">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/under_construction"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.20"/>
            <TextView
                style="@style/MainScreenCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/read_only"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.80"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/quote_of_the_day_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/read_only_mc" >
        <TextView
            android:id="@+id/quote_of_the_day"
            style="@style/MainScreenCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote_of_the_day" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shopping_list_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote_of_the_day_mc">
        <TextView
            android:id="@+id/shopping_list"
            style="@style/MainScreenCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bucket_list_mc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        app:layout_constraintBottom_toTopOf="@+id/weekly_monthly_planner_mc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shopping_list_mc"
        app:layout_constraintTop_toBottomOf="@+id/quote_of_the_day_mc"
        app:layout_constraintWidth_percent="0.45">
        <TextView
            android:id="@+id/bucket_list"
            style="@style/MainScreenCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bucket_list" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weekly_monthly_planner_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bucket_list_mc">
        <TextView
            android:id="@+id/weekly_monthly_planner"
            style="@style/MainScreenCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/weekly_monthly_planner" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/reading_list_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekly_monthly_planner_mc">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reading_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_list" >
            <TextView
                android:id="@+id/reading_list_tv"
                style="@style/MainScreenCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mood_board_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reading_list_mc">
        <TextView
            android:id="@+id/mood_board"
            style="@style/MainScreenCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mood_board" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/habits_tracking_mc"
        app:shapeAppearanceOverlay="@style/MaterialCardViewCut"
        android:theme="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_board_mc">
        <TextView
            android:id="@+id/habits_tracking"
            style="@style/MainScreenCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habits_tracking" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>